--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg  bg-light border border-dark">
+    <nav class="navbar navbar-expand-lg border border-dark">
         <div class="container-fluid">
             <a class="navbar-brand fs-3" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -34,13 +34,13 @@
     </nav>
     <div class="bg-page">
 
-        <div class="container intro ">
-            <div class="row ">
+        <div class="container introduction" style="min-width: 670px;">
+            <div class="row" >
                 <div class="col-12 d-flex justify-content-center align-items-center text-center">
                     <img src="./Images/download.jpg" alt="Anas Ashraf" width="250" height="200" class="intro">
                     <div>
                         <h2>Anas Ashraf</h2>
-                        <p style="color: black;">Hi, my name is Anas. I am currently learning coding and have recently started exploring web
+                        <p>Hi, my name is Anas. I am currently learning coding and have recently started exploring web
                             development. My expertise lies in front-end web development, and I enjoy creating visually
                             appealing and responsive websites.
 
