I've added another thing

--- a/index.html
+++ b/index.html
@@ -201,11 +201,10 @@
                         The website is responsive and user-friendly, catering to online shoppers.</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
-                    <h3>Weather App</h3>
-                    <img src="./Images/p5.jpg" alt="Weather App" class="img-fluid">
+                    <h3>E-project Astro Verse</h3>
+                    <img src="./Images/imageA.png" alt="Weather App" class="img-fluid">
                     <hr>
-                    <p>A weather forecasting app using APIs to fetch real-time weather data. It displays current weather
-                        conditions, forecasts, and other meteorological details.</p>
+                    <p>I have developed a Astonomical information website for my E-project it is a fun website where i share Astronomical facts in both Scientific and Islamic way. It is a responsive and mobile friendly website here is the link <a href="https://ansskhan.github.io/My-e-project/">Click here</a></p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <h3>Responsive Forms</h3>
