--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body class="body">
+<body class="body" style="overflow-y: hidden  ;">
   <nav class="navbar navbar-expand-lg up" id="navbar">
 
   </nav>
