--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </a>
       <div class="small-cont up">
         <a href="">INSTAGRAM</a>
-        <a href="www.linkedin.com/in/anas-ashraf-khan-281654379">LINKEDIN</a>
+        <a href="https://www.linkedin.com/in/anas-ashraf-khan-281654379">LINKEDIN</a>
         <a href="https://github.com/Ansskhan">GITHUB</a>
       </div>
     </div>
