--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             </div>
           </div>
           <hr>
-          <p>Front-end</p>
+          <p>Front-end (REACT,HTML,CSS,JS)</p>
           <hr>
-          <p>Back-end (Basic)</p>
+          <p>Back-end (PHP - LARAVEL)</p>
           <hr>
-          <p>Office Automation</p>
+          <p>Office Automation & WORDPRESS</p>
           <hr>
-          <p>JavaScript</p>
+          <p>MYSQL , SQL SERVER</p>
         </div>
       </a>
       <div class="small-cont up">
