--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8">
-    <title>Safs - HTML</title>
+    <title>Anas Ashraf</title>
 
     <!-- ====== Google Fonts ====== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
