--- a/index.html
+++ b/index.html
@@ -244,11 +244,86 @@
         <div class="container">
             <!-- Section Title -->
             <div class="row justify-content-center">
-                <div class="col-lg-6 ">
-                    <div class="section-title text-center">
-                        <h2>About Me</h2>
-                        <p>Here is About Me section that includes information of myself and what skills i have
-                            developed.</p>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h2>Hello, I am <span>Anas Ashraf</span></h2>
+                        <h4>.NET Full Stack Web Developer</h4>
+
+                        <p>
+                            I am a <strong>Junior .NET Developer</strong> and Full Stack Web Developer who builds
+                            <strong>responsive, scalable, and performance-focused web applications</strong>.
+                            My primary expertise lies in <strong>C#, ASP.NET, and SQL Server</strong>, with hands-on
+                            experience in PHP, Laravel, React, and modern frontend technologies.
+                            I focus on clean code, structured backend logic, and real-world development practices.
+                        </p>
+
+                        <h5>My Skills</h5>
+
+                        <!-- Skill Area -->
+                        <div id="skills" class="skill-area">
+
+                            <!-- Single skill -->
+                            <div class="single-skill">
+                                <div class="skillbar" data-percent="85%">
+                                    <div class="skillbar-title">
+                                        <span>.NET Development (C#, ASP.NET)</span>
+                                    </div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">85%</div>
+                                </div>
+                            </div>
+                            <!-- //Single skill -->
+
+                            <!-- Single skill -->
+                            <div class="single-skill">
+                                <div class="skillbar" data-percent="85%">
+                                    <div class="skillbar-title">
+                                        <span>Database (SQL Server, MySQL)</span>
+                                    </div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">85%</div>
+                                </div>
+                            </div>
+                            <!-- //Single skill -->
+
+                            <!-- Single skill -->
+                            <div class="single-skill">
+                                <div class="skillbar" data-percent="90%">
+                                    <div class="skillbar-title">
+                                        <span>Front-End (HTML5, CSS3, JavaScript, React)</span>
+                                    </div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">90%</div>
+                                </div>
+                            </div>
+                            <!-- //Single skill -->
+
+                            <!-- Single skill -->
+                            <div class="single-skill">
+                                <div class="skillbar" data-percent="80%">
+                                    <div class="skillbar-title">
+                                        <span>Backend (PHP, Laravel)</span>
+                                    </div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">80%</div>
+                                </div>
+                            </div>
+                            <!-- //Single skill -->
+
+                            <!-- Single skill -->
+                            <div class="single-skill">
+                                <div class="skillbar" data-percent="75%">
+                                    <div class="skillbar-title">
+                                        <span>Version Control (Git & GitHub)</span>
+                                    </div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">75%</div>
+                                </div>
+                            </div>
+                            <!-- //Single skill -->
+
+                        </div>
+                        <!-- //Skill Area -->
                     </div>
                 </div>
             </div>
