--- a/index.html
+++ b/index.html
@@ -244,6 +244,31 @@
         <div class="container">
             <!-- Section Title -->
             <div class="row justify-content-center">
+                <div class="col-lg-6 ">
+                    <div class="section-title text-center">
+                        <h2>About Me</h2>
+                        <p>Here is About Me section that includes information of myself and what skills i have
+                            developed.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- //Section Title -->
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-bg" style="background-image:url(assets/images/hero-area/Anas.jpeg)">
+                        <!-- Social Link -->
+                        <div class="social-aria">
+                            <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/anas-ashraf-khan-281654379/"><i
+                                    class="fab fa-linkedin"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/anas._.k77/"><i
+                                    class="fab fa-instagram"></i></a>
+                            <a target="_blank" href="#"><i class="fab fa-pinterest"></i></a>
+                            <a target="_blank" href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                        <!-- // Social Link -->
+                    </div>
+                </div>
                 <div class="col-lg-6">
                     <div class="about-content">
                         <h2>Hello, I am <span>Anas Ashraf</span></h2>
@@ -316,93 +341,6 @@
                                     <div class="skillbar-title">
                                         <span>Version Control (Git & GitHub)</span>
                                     </div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">75%</div>
-                                </div>
-                            </div>
-                            <!-- //Single skill -->
-
-                        </div>
-                        <!-- //Skill Area -->
-                    </div>
-                </div>
-            </div>
-            <!-- //Section Title -->
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="about-bg" style="background-image:url(assets/images/hero-area/Anas.jpeg)">
-                        <!-- Social Link -->
-                        <div class="social-aria">
-                            <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a target="_blank" href="https://www.linkedin.com/in/anas-ashraf-khan-281654379/"><i
-                                    class="fab fa-linkedin"></i></a>
-                            <a target="_blank" href="https://www.instagram.com/anas._.k77/"><i
-                                    class="fab fa-instagram"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-pinterest"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                        <!-- // Social Link -->
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-content">
-                        <h2>Hello, I am <span>Anas Ashraf</span></h2>
-                        <h4>Full-Stack Web Developer</h4>
-                        <p>I am a professional web developer who builds stunning, high-performance websites—from sleek
-                            personal portfolios to robust e-commerce stores that drive sales. Specializing in PHP with
-                            Laravel for dynamic backends, WordPress for quick and customizable sites, React for
-                            interactive frontends, and more, I deliver fully responsive, SEO-optimized solutions
-                            tailored precisely to your unique vision, timeline, and business goals.</p>
-
-                        <h5>My Skills</h5>
-
-                        <!-- Skill Area -->
-                        <div id="skills" class="skill-area">
-
-                            <!-- Single skill -->
-                            <div class="single-skill">
-                                <div class="skillbar" data-percent="95%">
-                                    <div class="skillbar-title"><span>Front-End (HTML5, CSS3, JS, REACT)</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">95%</div>
-                                </div>
-                            </div>
-                            <!-- //Single skill -->
-
-                            <!-- Single skill -->
-                            <div class="single-skill">
-                                <div class="skillbar" data-percent="90%">
-                                    <div class="skillbar-title"><span>Back-End (PHP / LARAVEL)</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">90%</div>
-                                </div>
-                            </div>
-                            <!-- //Single skill -->
-
-                            <!-- Single skill -->
-                            <div class="single-skill">
-                                <div class="skillbar" data-percent="85%">
-                                    <div class="skillbar-title"><span>Database (MySQL , SQL Server)</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">85%</div>
-                                </div>
-                            </div>
-                            <!-- //Single skill -->
-
-                            <!-- Single skill -->
-                            <div class="single-skill">
-                                <div class="skillbar" data-percent="80%">
-                                    <div class="skillbar-title"><span>WordPress</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">80%</div>
-                                </div>
-                            </div>
-                            <!-- //Single skill -->
-
-                            <!-- Single skill -->
-                            <div class="single-skill">
-                                <div class="skillbar" data-percent="75%">
-                                    <div class="skillbar-title"><span>VCS (Git & GitHub)</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">75%</div>
                                 </div>
