--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- ====== ALL CSS ====== -->
+
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="assets/css/responsive.css"> -->
+
 
 </head>
 
@@ -41,10 +43,13 @@
 
 
     <!-- ====== Header ====== -->
-    <header id="header" class="header">
-        <!-- ====== Navbar ====== -->
-        <!-- dynamically form js -->
-        <!-- ====== // Navbar ====== -->
+    <header class="header">
+        <nav id="header" class="navbar navbar-expand-lg fixed-top">
+            <!-- ====== Navbar ====== -->
+            <!-- dynamically form js -->
+            <!-- ====== // Navbar ====== -->
+        </nav>
+
     </header>
     <!-- ====== // Header ====== -->
 
@@ -351,6 +356,7 @@
                         <!-- //Skill Area -->
                     </div>
                 </div>
+
 
             </div>
         </div>
@@ -768,7 +774,8 @@
                                 <i class="fab fa-linkedin fa-lg"></i>
                             </div>
                             <div class="info-content">
-                                <p class="mb-0"><a href="YOUR_LINKEDIN_LINK" class="cont-link" target="_blank">LinkedIn
+                                <p class="mb-0"><a href="https://www.linkedin.com/in/anas-ashraf-khan-281654379/"
+                                        class="cont-link" target="_blank">LinkedIn
                                         Profile</a></p>
                             </div>
                         </div>
@@ -778,7 +785,7 @@
                                 <i class="fa fa-phone fa-lg"></i>
                             </div>
                             <div class="info-content">
-                                <p class="mb-0 cont-link">+92 312 3456789</p>
+                                <p class="mb-0 cont-link">+92 370 2339602</p>
                             </div>
                         </div>
                     </div>
@@ -833,6 +840,10 @@
 
 
     <!-- ====== ALL JS ====== -->
+    <script src="assets/js/components/navbar.js"></script>
+    <script src="assets/js/components/fetch.js"></script>
+    <script src="assets/js/components/fetch2.js"></script>
+    <script src="assets/js/components/footer.js"></script>
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/lightbox.min.js"></script>
@@ -843,10 +854,8 @@
     <script src="assets/js/skill.bar.js"></script>
     <script src="assets/js/fact.counter.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/components/navbar.js"></script>
-    <script src="assets/js/components/fetch.js"></script>
-    <script src="assets/js/components/fetch2.js"></script>
-    <script src="assets/js/components/footer.js"></script>
+
+
 </body>
 
 </html>
